Fix some issues

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Global */
+
 * {
     margin: 0;
     padding: 0;
@@ -13,6 +15,8 @@ body {
     font-size: 16px;
     font-weight: 600;
 }
+
+/* Main */
 
 .container {
     margin: auto;
@@ -45,67 +49,6 @@ hr {
     margin: auto;
 }
 
-/* .main-container h3 {
-    margin-right: 5vh;
-}
-/* Input CSS */
-
-/* .search-container {
-    display: flex;
-    justify-content: center;
-} */
-
-/* .search-container input {
-    width: 50%;
-    font-size: 2rem;
-    text-transform: capitalize;
-    text-align: center;
-}
-
-.search-container button {
-    font-family: "poppins";
-    min-width: 7%;
-}
-
-/* Location CSS */
-
-/* .location-container {
-    height: 30%;
-    font-size: 6rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
-
-/* Temperature CSS */
-
-/* .temperature-container {
-    height: 30%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.temperature-container h2 {
-    font-size: 15rem;
-}
-
-#celsius {
-    font-size: 6rem;
-} */
-
-/* Description */
-/* 
-.description-container {
-    height: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2rem;
-} */
-
-/* Few others */
-
 #city,
 #description {
     text-transform: capitalize;
@@ -114,178 +57,3 @@ hr {
 #country {
     text-transform: uppercase;
 }
-
-/* Media queries */
-
-/* @media screen and (max-width: 1000px) {
-    .location-container {
-        font-size: 5rem;
-    }
-
-    .temperature-container h2 {
-        font-size: 13rem;
-    }
-
-    #celsius {
-        font-size: 5.5rem;
-    }
-    .main-container h3 {
-        margin-right: 1vh;
-    }
-}
-
-@media screen and (max-width: 850px) {
-    .location-container {
-        font-size: 4.5rem;
-    }
-
-    .temperature-container h2 {
-        font-size: 12rem;
-    }
-
-    #celsius {
-        font-size: 3.5rem;
-    }
-}
-
-@media screen and (max-width: 760px) {
-    .location-container {
-        font-size: 4rem;
-    }
-
-    .temperature-container h2 {
-        font-size: 11rem;
-    }
-}
-
-@media screen and (max-width: 700px) {
-    .location-container {
-        font-size: 3.5rem;
-    }
-
-    .temperature-container h2 {
-        font-size: 9rem;
-    }
-}
-
-@media screen and (max-width: 620px) {
-    .location-container {
-        font-size: 3rem;
-        height: 20%;
-    }
-
-    .temperature-container h2 {
-        font-size: 7rem;
-    }
-
-    .temperature-container {
-        height: 30%;
-    }
-
-    .description-container {
-        height: 25%;
-    }
-}
-
-@media screen and (max-width: 520px) {
-    .location-container {
-        font-size: 3rem;
-        height: 20%;
-    }
-
-    .temperature-container h2 {
-        font-size: 7rem;
-    }
-
-    .temperature-container {
-        height: 30%;
-    }
-
-    .description-container {
-        height: 25%;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .location-container {
-        font-size: 2.5rem;
-        height: 20%;
-    }
-
-    .temperature-container h2 {
-        font-size: 6.5rem;
-    }
-
-    .temperature-container {
-        height: 30%;
-    }
-
-    .description-container {
-        height: 25%;
-    }
-
-    #celsius {
-        font-size: 3rem;
-    }
-
-    .search-container input {
-        font-size: 1.5rem;
-    }
-}
-
-@media screen and (max-width: 420px) {
-    .location-container {
-        font-size: 2rem;
-        height: 20%;
-    }
-
-    .temperature-container h2 {
-        font-size: 6rem;
-    }
-
-    .temperature-container {
-        height: 30%;
-    }
-
-    .description-container {
-        height: 25%;
-    }
-
-    #celsius {
-        font-size: 3rem;
-    }
-    .search-container input {
-        font-size: 1rem;
-        padding: 8px;
-    }
-}
-
-@media screen and (max-width: 350px) {
-    .location-container {
-        font-size: 1.5rem;
-        height: 20%;
-    }
-
-    .temperature-container h2 {
-        font-size: 6rem;
-    }
-
-    .temperature-container {
-        height: 30%;
-    }
-
-    .description-container {
-        height: 25%;
-    }
-
-    #celsius {
-        font-size: 3rem;
-    }
-
-    .description-container img {
-        width: 80px;
-    }
-    .search-container input {
-        font-size: 1rem;
-    }
-} */
