--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     background-image: linear-gradient(120deg, #252d30, #203a43, #2c5364);
     color: azure;
     text-align: center;
-    overflow: hidden;
+
     height: 100vh;
     font-size: 16px;
     font-weight: 600;
@@ -56,4 +56,23 @@ hr {
 
 #country {
     text-transform: uppercase;
+}
+
+@media screen and (max-width: 992px) {
+    .humidity,
+    .pressure,
+    .wind-speed {
+        display: none !important;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    input {
+        font-size: 1rem;
+        width: 100%;
+    }
+    button {
+        padding: 1px;
+        width: 30px !important;
+    }
 }
