--- a/style.css
+++ b/style.css
@@ -7,24 +7,29 @@
 }
 
 body {
-    background-image: linear-gradient(120deg, #252d30, #203a43, #2c5364);
-    color: azure;
+    background: linear-gradient(#261253, #3e2c68);
+    color: white;
     text-align: center;
-
     height: 100vh;
     font-size: 16px;
     font-weight: 600;
+    font-family: "Montserrat", sans-serif !important;
 }
 
 /* Main */
 
-.container {
+#container1 {
     margin: auto;
-    background-color: rgb(166, 173, 173);
+    background-color: rgba(119, 119, 119, 0.171);
     border-radius: 20px;
     margin-top: 3vh;
-    color: rgb(1, 73, 73);
+    color: rgba(235, 235, 235, 0.849) !important;
 }
+
+#container2 {
+    margin-top: 1rem;
+}
+
 input {
     max-width: 60%;
     text-transform: capitalize;
